--- a/src/main/resources/templates/client/come-in-and-find-out.html
+++ b/src/main/resources/templates/client/come-in-and-find-out.html
@@ -50,7 +50,7 @@
             </h2>
             <div th:id="'collapse' + ${category}" class="accordion-collapse collapse" th:aria-labelledby="'heading' + ${category}" data-bs-parent="#crudTables">
                 <div class="accordion-body">
-                    <form th:action="@{'/come-in-and-find-out/' + ${category}}" method="post" enctype="multipart/form-data">
+                    <form id="form-id" th:action="@{'/come-in-and-find-out/' + ${category}}" method="post" enctype="multipart/form-data">
                         <button class="btn btn-primary mb-2" type="button" th:attr="onclick='addRow(\'' + ${category} + '\')'">Add</button>
                         <table class="table table-bordered">
                             <thead>
@@ -97,7 +97,7 @@
                             </tr>
                             </tbody>
                         </table>
-                        <button class="btn btn-success" type="submit">Save changes</button>
+                        <button id="btn-submit" class="btn btn-success" type="submit">Save changes</button>
                     </form>
                 </div>
             </div>
@@ -233,6 +233,10 @@
 
     document.getElementById('imageModal').addEventListener('hidden.bs.modal', function () {
         document.getElementById('fullscreenImage').src = '';
+    });
+
+    document.getElementById('form-id').addEventListener('submit', function () {
+        document.getElementById('btn-submit').disabled = true;
     });
 </script>
 </body>
