--- a/src/main/resources/templates/client/come-in-and-find-out.html
+++ b/src/main/resources/templates/client/come-in-and-find-out.html
@@ -12,11 +12,19 @@
             width: 25%;
         }
 
-        .thumbnail {
+        .thumbnail-base {
             display: block;
-            width: 196px;
-            height: 110px;
             margin: 5px auto;
+        }
+
+        .thumbnail-filled {
+            max-width: 192px;
+            max-height: 108px;
+        }
+
+        .thumbnail-empty {
+            width: 192px;
+            height: 108px;
         }
 
         .file-upload-button {
@@ -52,7 +60,7 @@
             <div th:id="'collapse' + ${category}" class="accordion-collapse collapse" th:aria-labelledby="'heading' + ${category}" data-bs-parent="#crudTables">
                 <div class="accordion-body">
                     <form th:action="@{'/come-in-and-find-out/' + ${category}}" method="post" enctype="multipart/form-data">
-                        <button class="btn btn-primary mb-2" type="button" th:attr="onclick='addRow(\'' + ${category} + '\')'">Add</button>
+                        <button class="btn btn-outline-primary mb-2" type="button" th:attr="onclick='addRow(\'' + ${category} + '\')'" title="Add"><i class="bi bi-plus"></i></button>
                         <table class="table table-bordered">
                             <thead>
                             <tr>
@@ -70,22 +78,22 @@
                                     <textarea class="form-control" th:name="|items[${iter.index}].description|" rows="6" th:text="${item.description}"></textarea>
                                 </td>
                                 <td>
-                                    <img th:src="${item.image1Base64}" class="thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal">
+                                    <img th:src="${item.image1Base64}" th:classappend="${item.image1Base64} ?'thumbnail-filled':'thumbnail-empty'" class="thumbnail-base">
                                     <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
                                     <input type="file" th:name="|items[${iter.index}].image1|" class="form-control d-none" onchange="updateButtonText(this)">
                                 </td>
                                 <td>
-                                    <img th:src="${item.image2Base64}" class="thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal">
+                                    <img th:src="${item.image2Base64}" th:classappend="${item.image2Base64} ?'thumbnail-filled':'thumbnail-empty'" class="thumbnail-base">
                                     <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
                                     <input type="file" th:name="|items[${iter.index}].image2|" class="form-control d-none" onchange="updateButtonText(this)">
                                 </td>
                                 <td>
-                                    <img th:src="${item.image3Base64}" class="thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal">
+                                    <img th:src="${item.image3Base64}" th:classappend="${item.image3Base64} ?'thumbnail-filled':'thumbnail-empty'" class="thumbnail-base">
                                     <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
                                     <input type="file" th:name="|items[${iter.index}].image3|" class="form-control d-none" onchange="updateButtonText(this)">
                                 </td>
                                 <td>
-                                    <img th:src="${item.image4Base64}" class="thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal">
+                                    <img th:src="${item.image4Base64}" th:classappend="${item.image4Base64} ?'thumbnail-filled':'thumbnail-empty'" class="thumbnail-base">
                                     <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
                                     <input type="file" th:name="|items[${iter.index}].image4|" class="form-control d-none" onchange="updateButtonText(this)">
                                 </td>
@@ -98,8 +106,8 @@
                             </tr>
                             </tbody>
                         </table>
-                        <button class="btn btn-success" type="submit">
-                            Save changes
+                        <button class="btn btn-warning" type="submit">
+                            Upload
                             <span class="spinner-border spinner-border-sm d-none ms-2" role="status" aria-hidden="true"></span>
                         </button>
                     </form>
@@ -121,19 +129,6 @@
             </div>
         </div>
     </div>
-    <!-- Modal for fullscreen image -->
-    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body text-center">
-                    <img src="" alt="" id="fullscreenImage" class="img-fluid">
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -147,22 +142,22 @@
             <textarea class="form-control" name="items[${tableSize}].description" rows="6"></textarea>
         </td>
         <td>
-            <img src="" class="thumbnail" alt="" data-bs-toggle="modal" data-bs-target="#imageModal"/>
+            <img src="" class="thumbnail-base thumbnail-empty" alt=""/>
             <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
             <input type="file" name="items[${tableSize}].image1" class="form-control d-none" onchange="updateButtonText(this)">
         </td>
         <td>
-            <img src="" class="thumbnail" alt="" data-bs-toggle="modal" data-bs-target="#imageModal"/>
+            <img src="" class="thumbnail-base thumbnail-empty" alt=""/>
             <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
             <input type="file" name="items[${tableSize}].image2" class="form-control d-none" onchange="updateButtonText(this)">
         </td>
         <td>
-            <img src="" class="thumbnail" alt="" data-bs-toggle="modal" data-bs-target="#imageModal"/>
+            <img src="" class="thumbnail-base thumbnail-empty" alt=""/>
             <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
             <input type="file" name="items[${tableSize}].image3" class="form-control d-none" onchange="updateButtonText(this)">
         </td>
         <td>
-            <img src="" class="thumbnail" alt="" data-bs-toggle="modal" data-bs-target="#imageModal"/>
+            <img src="" class="thumbnail-base thumbnail-empty" alt=""/>
             <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
             <input type="file" name="items[${tableSize}].image4" class="form-control d-none" onchange="updateButtonText(this)">
         </td>
@@ -183,7 +178,7 @@
 
     function updateButtonText(input) {
         const button = input.previousElementSibling;
-        const thumbnail = input.closest('td').querySelector('.thumbnail');
+        const thumbnail = input.closest('td').querySelector('.thumbnail-base');
         const file = input.files[0];
 
         if (file) {
@@ -199,6 +194,9 @@
             if (fileSize > 4 * 1024 * 1024 || !allowedTypes.includes(fileType)) {
                 showWarningModal("The selected file must be a valid image (JPEG, PNG or GIF) and no larger than 4MB.");
                 input.value = '';
+                thumbnail.src = '';
+                thumbnail.classList.remove('thumbnail-filled');
+                thumbnail.classList.add('thumbnail-empty');
                 button.textContent = "Choose File";
                 button.classList.remove('btn-link');
                 return;
@@ -214,6 +212,8 @@
             const reader = new FileReader();
             reader.onload = function (e) {
                 thumbnail.src = e.target.result;
+                thumbnail.classList.remove('thumbnail-empty');
+                thumbnail.classList.add('thumbnail-filled');
             };
             reader.readAsDataURL(file);
         } else {
@@ -228,16 +228,6 @@
         const warningModal = new bootstrap.Modal(document.getElementById('warningModal'));
         warningModal.show();
     }
-
-    document.querySelectorAll('.thumbnail').forEach(item => {
-        item.addEventListener('click', function () {
-            document.getElementById('fullscreenImage').src = this.src;
-        });
-    });
-
-    document.getElementById('imageModal').addEventListener('hidden.bs.modal', function () {
-        document.getElementById('fullscreenImage').src = '';
-    });
 
     document.querySelectorAll('button[type="submit"]').forEach(button => {
         button.addEventListener('click', function () {
