--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -81,7 +81,7 @@
         <div class="mb-3">
             <input type="password" name="password" class="form-control" placeholder="Password" required>
         </div>
-        <button type="submit" class="btn btn-primary w-100" onclick="this.disabled=true; this.innerText='Logging in...'; this.form.submit();">Login</button>
+        <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
