--- a/src/main/resources/templates/client/come-in-and-find-out.html
+++ b/src/main/resources/templates/client/come-in-and-find-out.html
@@ -99,15 +99,15 @@
                                 </td>
                                 <td style="text-align: center;">
                                     <br>
-                                    <input type="checkbox" class="btn-check" th:name="|items[${iter.index}].delete|" th:id="'btn-check-outlined-delete-' + ${category} + '-' + ${iter.index}">
-                                    <label class="btn btn-outline-danger" th:for="'btn-check-outlined-delete-' + ${category} + '-' + ${iter.index}" title="Mark for removal"><i class="bi bi-trash"></i></label>
+                                    <input type="checkbox" class="btn-check" th:name="|items[${iter.index}].delete|" th:id="'btn-check-outlined-success-' + ${category} + '-' + ${iter.index}">
+                                    <label class="btn btn-outline-success" th:for="'btn-check-outlined-success-' + ${category} + '-' + ${iter.index}" title="Mark as sold"><i class="bi bi-currency-dollar"></i></label>
                                     <input type="hidden" th:name="|items[${iter.index}].id|" th:value="${item.id}">
                                 </td>
                             </tr>
                             </tbody>
                         </table>
                         <button class="btn btn-warning" type="submit">
-                            Upload
+                            Save
                             <span class="spinner-border spinner-border-sm d-none ms-2" role="status" aria-hidden="true"></span>
                         </button>
                     </form>
@@ -163,8 +163,8 @@
         </td>
         <td style="text-align: center;">
             <br>
-            <input type="checkbox" class="btn-check" name="items[${tableSize}].delete" id="'btn-check-outlined-delete-' + ${category} + '-' + ${tableSize}">
-            <label class="btn btn-outline-danger" for="'btn-check-outlined-delete-' + ${category} + '-' + ${tableSize}" title="Mark for removal"><i class="bi bi-trash"></i></label>
+            <input type="checkbox" class="btn-check" name="items[${tableSize}].delete" id="'btn-check-outlined-success-' + ${category} + '-' + ${tableSize}">
+            <label class="btn btn-outline-success" for="'btn-check-outlined-success-' + ${category} + '-' + ${tableSize}" title="Mark as sold"><i class="bi bi-currency-dollar"></i></label>
             <input type="hidden" name="items[${tableSize}].id">
         </td>
         `;
