--- a/src/main/resources/templates/client/come-in-and-find-out.html
+++ b/src/main/resources/templates/client/come-in-and-find-out.html
@@ -72,12 +72,12 @@
                         <table class="table table-bordered">
                             <thead>
                             <tr>
-                                <th>Description</th>
-                                <th>Image 1</th>
-                                <th>Image 2</th>
-                                <th>Image 3</th>
-                                <th>Image 4</th>
-                                <th>Actions</th>
+                                <th class="text-center">Description</th>
+                                <th class="text-center">Image 1</th>
+                                <th class="text-center">Image 2</th>
+                                <th class="text-center">Image 3</th>
+                                <th class="text-center">Image 4</th>
+                                <th class="text-center">Actions</th>
                             </tr>
                             </thead>
                             <tbody th:id="'tableBody' + ${category}">
