--- a/src/main/resources/templates/clients/come-in-and-find-out.html
+++ b/src/main/resources/templates/clients/come-in-and-find-out.html
@@ -34,7 +34,7 @@
 
         .title-image {
             display: block;
-            margin: 0 auto 20px;
+            margin: 0 auto 0;
             border: 2px solid black;
             border-radius: 25px;
             max-width: 66%;
@@ -49,6 +49,11 @@
 <body>
 <div class="container mt-4 custom-container">
     <img src="/img/clients/come-in-and-find-out.webp" alt="" class="title-image">
+    <a th:href="@{'/grafana'}" target="_blank">
+        <img src="/img/grafana.svg" width="32px" alt="" title="My analytics dashboard">
+    </a>
+    <br>
+    <br>
 
     <div class="accordion" id="crudTables">
         <div th:each="category : ${categories}" class="accordion-item">
